add to favorites

--- a/header.html
+++ b/header.html
@@ -15,6 +15,9 @@
                 <li class="nav-item dropdown">
                     <a href="genres.html" class="dropdown-toggle">Genres</a>
                 </li>
+                <li>
+                    <a href="favorites.html" class="dropdown-toggle">Favorites</a>
+                </li>
             </ul>
         </nav>
 </header>
